Added skills and new background
Added more items to skill section and changed the background color

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,8 @@
                     <li>JavaScript</li>
                     <li>Git</li>
                     <li>Visual Studio Code</li>
+                    <li>Fishing</li>
+                    <li>Cycling</li>
                 </ul>
             </section>
         </article>
